# food-ordering

./: CMakeLists.txt  README.md  buyer.c  buyer.h  buyerdata.c  buyerdata.h  customer_answers.c  customer_answers.h  customer_choices.c  customer_choices.h  data.txt  definitions.h  display_options.c  display_options.h  drinks.c  drinks.h  foodTypes.c  foodTypes.h  input.c  input.h  main.c  output.c  output.h  specificfoods.c  specificfoods.h
